# cpp-unit-test-generator

./: .gitignore  CMakeLists.txt  README.md  README.md:Zone.Identifier
.github/workflows/: unit-tests.yml
build-coverage/: calculator.cpp.gcov  calculator.gcda  calculator.gcno  calculator_test.gcda  calculator_test.gcno  runTests
prompts/: instructions.yaml
src/: calculator.cpp  calculator.h
tests/: CoverageReport.md  calculator_test.cpp
